deploy/k8s/svc-notification/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-notification
spec:
  selector:
    app: svc-notification
  ports:
    - port: 80
      targetPort: 8086
